tried to fix white space for mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -6,38 +6,41 @@ p{
   position: relative;;
   top : 50%;
 }
+div {
+    white-space: nowrap;
+}
 .a1{
     background-color: #1d0b0b;
     width: 100%;
-    height: 15.625%;
+    height: 9.76%;
     top: 0px;
     display: block;
 }
 .b2{
     background-color: red;
     width: 100%;
-    height: 31.25%;
+    height: 19.53%;
     top: 30px;
     display: block;
 }
 .c3{
     background-color: blue;
     width: 100%;
-    height: 26.04%;
+    height: 16.27%;
     top: 60px;
     display: block;
 }
 .d4 {
    background-color: green;
    width: 100%;
-   height: 26.04%;
+   height: 16.27%;
    top: 50px;
    display: block;
 }
 .e5{
     background-color: pink;
     width: 50%;
-    height: 52.08%;
+    height: 32.55%;
     top: 60px;
     display: inline-block;
 
@@ -45,7 +48,7 @@ p{
 .f6{
     background-color:  grey;
     width: 50%;
-    height: 52.08%;
+    height: 32.55%;
     top: 60px;
     display: inline-block;
     float:left;
@@ -53,14 +56,14 @@ p{
 .g7{
     background-color: yellow;
     width: 50%;
-    height: 52.08%;
+    height: 32.55%;
     top: 80px;
     display: inline-block;
 }
 .h8{
     background-color: purple;
     width: 50%;
-    height: 52.08%;
+    height: 32.55%;
     top: 90px;
     display: inline-block;
     float:left;
@@ -68,14 +71,14 @@ p{
 .i11{
     background-color: #5cf442;
     width: 100%;
-    height: 16.66%;
+    height: 10.41%;
     top: 95px;
     display: block;
 }
 .k{
     background-color:#f4cd41;
     width: 100%;
-    height: 100%;
+    height: 1;
     top: 10px;
 
 }
